# Coders-Cup-Hackathon-Backend

./: .env.example  .gitignore  ADMIN_API_DOCUMENTATION.md  Coders Cup Hackathon Technical Doc.docx  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_QUICK_DEPLOY.md  app.js  package.json  tsconfig.json  vercel.json
api/: index.js
blockchain/: .env.example  .gitignore  Anchor.toml  QUICK_START.md  README.md  SINGLE_FILE_PROGRAM.rs  package.json  tsconfig.json
blockchain/docs/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  TESTING.md
blockchain/programs/loan-management/: Cargo.toml
blockchain/programs/loan-management/src/: errors.rs  events.rs  lib.rs  state.rs
blockchain/programs/loan-management/src/instructions/: create_loan.rs  get_credit_score.rs  initialize.rs  mark_loan_completed.rs  mark_loan_defaulted.rs  mod.rs  record_payment.rs  register_user.rs  update_risk_score.rs  update_user_profile.rs  waive_fine.rs
blockchain/scripts/: initialize-program.ts  test-integration.ts
blockchain/sdk/: index.ts  integration-service.ts  solana-service.ts  wallet-manager.ts
blockchain/tests/: loan-management.test.ts
scripts/: createAdmin.ts
src/ai/: dataAnonymizer.ts  geminiClient.ts  geminiPrompts.ts  riskScoringEngine.ts
src/controllers/: admin.controller.ts  auth.controller.ts  cron.controller.ts  payment.controller.ts  user.controller.ts
src/jobs/: installmentReminderJob.ts
src/middlewares/: auth.middleware.ts  roleCheck.middleware.ts
src/models/: AuditLog.ts  EmailLog.ts  Installment.ts  Loan.ts  LoanRequest.ts  PaymentTransaction.ts  RiskProfile.ts  User.ts
(+10 files in other folders)
